# dialogical

./: Cargo.toml  README.md
dialogical/: __init__.py  defs.py  main.py  parser.py
dummy-data/: small-ix.dg
dummy_data/: agent_link.dg  autolink.dg  dupe_ix.dg  empties.dg  gdscript.dg  import.dg  import_sub.dg  link.dg  link_between_ix.dg  link_loop.dg  narrator.dg  newlines.dg  one_ix_many_pages.dg  pageonly.dg  rodrick.dg  small_ix.dg  two_ix.dg  unlink.dg  vsauce.dg  your_mom.dg
dummy_data/pets/: main.dg
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
src/: comptime.py  comptime.rs  consts.rs  defs.py  lib.rs  main.py  main.rs  pages.rs  parser.py  parser.rs
src/comptime/: autolink.rs  include.rs  link.rs  mod.rs  tests.rs
src/parser/: context.rs  dendings.rs  doption.rs  endings.rs  metaline.rs  mod.rs  tests.rs
test/: your-mom.dg
tests/: context.py  test_paginate.py
tests/dummy/: your-mom.dg
