[package]
name = "dialogical"
version = "0.2.0"
edition = "2021"

authors = ["Cherry <dieselguitar@sparklet.org>"]
license = "GPL-3.0-only"

description = "P/E/T/S 2037 Dialogue Tree Compiler"
readme = "README.md"

homepage = "https://github.com/Lamby777/dialogical"
repository  = "https://github.com/Lamby777/dialogical"
keywords = ["cli", "gamedev", "dialogue", "parser", "dsl"]
categories = ["command-line-utilities"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"

[[bin]]
name="dg"
path="src/main.rs"
